# AhmerPdfium

./: .gitignore  README.md  build.gradle  build.gradle.kts  settings.gradle
PdfViewer/: .gitignore  README.md  build.gradle  build.gradle.kts
PdfViewer/src/main/: AndroidManifest.xml
PdfViewer/src/main/java/com/ahmer/pdfviewer/: AnimationManager.kt  BreakIteratorHelper.kt  CacheManager.kt  DecodingAsyncTask.kt  DecodingTask.kt  DragPinchManager.kt  PDFView.kt  PDFViewSelection.kt  PagesLoader.kt  PdfFile.kt  RenderingHandler.kt  SearchTask.kt
PdfViewer/src/main/java/com/ahmer/pdfviewer/async/: AsyncTask.kt  AsyncWorker.kt
PdfViewer/src/main/java/com/ahmer/pdfviewer/decoding/: DecodingRunner.kt  DecodingTask.kt
PdfViewer/src/main/java/com/ahmer/pdfviewer/exception/: PageRenderingException.kt
PdfViewer/src/main/java/com/ahmer/pdfviewer/link/: DefaultLinkHandler.kt  LinkHandler.kt
PdfViewer/src/main/java/com/ahmer/pdfviewer/listener/: Callbacks.kt  OnDrawListener.kt  OnErrorListener.kt  OnLoadCompleteListener.kt  OnLongPressListener.kt  OnPageChangeListener.kt  OnPageErrorListener.kt  OnPageScrollListener.kt  OnRenderListener.kt  OnSelection.kt  OnTapListener.kt  OnTextParseListener.kt
PdfViewer/src/main/java/com/ahmer/pdfviewer/model/: LinkTapEvent.kt  PagePart.kt  SearchRecord.kt  SearchRecordItem.kt
PdfViewer/src/main/java/com/ahmer/pdfviewer/scroll/: DefaultScrollHandle.kt  ScrollHandle.kt
PdfViewer/src/main/java/com/ahmer/pdfviewer/source/: AssetSource.kt  ByteArraySource.kt  DocumentSource.kt  FileSource.kt  InputStreamSource.kt  UriSource.kt
PdfViewer/src/main/java/com/ahmer/pdfviewer/util/: ArrayUtils.kt  MathUtils.kt  PageSizeCalculator.kt  PdfConstants.kt  PdfFileUtils.kt  PdfUtils.kt  ScrollDir.kt  State.kt
PdfViewer/src/main/res/values/: colors.xml
Pdfium/: .gitignore  README.md  build.gradle  build.gradle.kts
Pdfium/src/main/: AndroidManifest.xml
Pdfium/src/main/cpp/: mainJNILib.cpp
Pdfium/src/main/cpp/include/: fpdf_annot.h  fpdf_doc.h  fpdf_edit.h  fpdf_formfill.h  fpdf_structtree.h  fpdfview.h
Pdfium/src/main/cpp/include/cpp/: fpdf_scopers.h
Pdfium/src/main/java/com/ahmer/pdfium/: Bookmark.kt  Link.kt  Meta.kt  PdfDocument.kt  PdfPage.kt  PdfPasswordException.kt  PdfiumCore.kt  SearchRecord.kt
Pdfium/src/main/java/com/ahmer/pdfium/bookmark/: BookMarkEntry.kt  BookMarkNode.kt
Pdfium/src/main/java/com/ahmer/pdfium/search/: FPDFTextSearchContext.kt  SearchData.kt  SearchHandler.kt  SearchHit.kt  TextSearchContext.kt
Pdfium/src/main/java/com/ahmer/pdfium/treeview/: TreeViewAdapter.kt  TreeViewNode.kt
Pdfium/src/main/java/com/ahmer/pdfium/util/: Size.kt  SizeF.kt
app/: .gitignore  build.gradle  build.gradle.kts
app/release/: output-metadata.json
app/src/androidTest/java/com/ahmer/afzal/pdfium/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/ahmer/afzal/pdfium/: App.kt  AppModule.kt  AppPreferencesManager.kt  AppServices.kt  AppUtils.kt  Constants.kt  DialogJumpTo.kt  DialogMoreInfo.kt  MainActivity.kt  PdfActivity.kt  PdfActivityModel.kt  PdfFragment.kt  PdfFragmentModel.kt  PdfViewModel.kt
app/src/main/java/com/ahmer/afzal/pdfviewer/: App.kt  AppDataStore.kt  AppModule.kt  AppPreferencesManager.kt  AppUtils.kt  Constants.kt  DataStore.kt  MainActivity.kt  PdfActivity.kt  PdfActivityModel.kt  PdfDialogHelper.kt  PdfFragment.kt  PdfFragmentModel.kt  PdfHelper.kt  PdfUiState.kt  TestPdfium.kt
app/src/main/res/drawable/: cancel.xml  chevron_left.xml  ic_baseline_light_mode.xml  ic_baseline_pages.xml  ic_baseline_print.xml  ic_baseline_swipe_horiz.xml  ic_baseline_visibility.xml  ic_pdf.xml  selector_visible_icon.xml
app/src/main/res/layout/: activity_main.xml  activity_pdf.xml  activity_test_pdfium.xml  dialog_pdf_info.xml  dialog_pdf_jumpto.xml  dialog_pdf_password.xml  fragment_pdf.xml  search_controls.xml
app/src/main/res/menu/: pdf.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: searchable.xml
app/src/test/java/com/ahmer/afzal/pdfium/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libPdfViewer/: .gitignore  README.md  build.gradle.kts  proguard-rules.pro
libPdfViewer/src/main/java/com/ahmer/pdfviewer/: AnimationManager.kt  CacheManager.kt  DecodingTask.kt  DragPinchManager.kt  My.kt  MyClass.kt  PDFView.kt  PagesLoader.kt  PdfFile.kt  RenderingHandler.kt
libPdfViewer/src/main/java/com/ahmer/pdfviewer/exception/: PageRenderingException.kt
libPdfViewer/src/main/java/com/ahmer/pdfviewer/link/: DefaultLinkHandler.kt
libPdfViewer/src/main/java/com/ahmer/pdfviewer/listener/: Callbacks.kt  OnDrawListener.kt  OnLoadCompleteListener.kt  OnLongPressListener.kt  OnPageChangeListener.kt  OnRenderListener.kt  OnTapListener.kt
libPdfViewer/src/main/java/com/ahmer/pdfviewer/model/: LinkTapEvent.kt  PagePart.kt
libPdfViewer/src/main/java/com/ahmer/pdfviewer/scroll/: DefaultScrollHandle.kt
libPdfViewer/src/main/java/com/ahmer/pdfviewer/search/: PdfSearchManager.kt
libPdfViewer/src/main/java/com/ahmer/pdfviewer/source/: AssetSource.kt  ByteArraySource.kt  DocumentSource.kt  FileSource.kt  UriSource.kt  (+1 more)
libPdfium/: .gitignore  README.md  build.gradle.kts
libPdfium/src/main/cpp/: CMakeLists.txt  mainJNILib.cpp  pdfium.cpp
libPdfium/src/main/cpp/include/: fpdf_annot.h  fpdf_attachment.h  fpdf_dataavail.h  fpdf_doc.h  fpdf_edit.h  fpdf_ext.h  fpdf_formfill.h  fpdf_fwlevent.h  fpdf_javascript.h  fpdf_ppo.h  fpdf_progressive.h  fpdf_save.h  fpdf_signature.h  fpdf_structtree.h  fpdf_sysfontinfo.h  fpdf_text.h  fpdf_thumbnail.h  fpdf_transformpage.h  fpdfview.h  util.h
libPdfium/src/main/cpp/include/cpp/: fpdf_deleters.h  fpdf_scopers.h
libPdfium/src/main/cpp/utils/: Errors.h  Mutex.h
libPdfium/src/main/java/com/ahmer/pdfium/: FindResult.kt  MyClass.kt  NativeLib.kt  PdfDocument.kt  PdfPage.kt  PdfPageLink.kt  PdfPasswordException.kt  PdfTextPage.kt  PdfWriteCallback.kt  PdfiumCore.kt
(+11 files in other folders)
